# polkadot-embedded-wallet

./: .gitignore  README.md
core/: Cargo.toml
core/src/: crypto.rs  definitions.rs  error.rs  helpers.rs  keyring.rs  main.rs  network_spec.rs  users.rs
