[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
hex = { version = "0.4.3" }
libsecp256k1 = "0.7.1"
tiny-bip39 = { version = "1.0.0" }
lazy_static = "1.4.0"
regex = "1.10.3"
# substrate dependencies
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
 "derive",
] }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = ["sp-core/std", "sp-runtime/std", "codec/std"]
